--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,6 @@ html {
     font-size: 62.5%;
     /* 1rem = 10px */
     max-width: 100vw;
-    overflow-x: hidden;
 }
 
 body {
@@ -21,7 +20,6 @@ body {
 .container {
     width: 85vw;
     margin: auto;
-
 }
 
 :root {
@@ -354,6 +352,10 @@ input {
     grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
     justify-content: space-between;
     gap: 3rem;
+}
+
+.singleProducts_related_Data .feature-cards {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 }
 
 .card {
@@ -976,11 +978,43 @@ footer .social-links .f-logos {
     font-size: 3rem;
 }
 
+
+
 @media (max-width:750px) {
+
+
+    .bigImage {
+        height: 25rem !important;
+    }
+
+    .bigImage img {
+        height: 20rem !important;
+    }
+
+    .small_Images img {
+        padding: .5rem !important;
+        width: 60px !important;
+    }
 
     .card .img img {
         height: 150px;
     }
+
+
+    .bigImage .previous {
+        left: 0%;
+        height: 3rem;
+        width: 3rem;
+        font-size: 2rem;
+    }
+
+    .bigImage .next {
+        height: 3rem;
+        width: 3rem;
+        font-size: 2rem;
+        right: 0%;
+    }
+
 
 
     .singleProduct {
@@ -1039,10 +1073,18 @@ footer .social-links .f-logos {
         color: var(--anchorColor) !important;
     }
 
+    .HomePage .feature-cards {
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    }
+
 
 }
 
 @media (max-width:500px) {
+
+    .bigImage img {
+        height: 150px;
+    }
 
     .cards,
     .products {
@@ -1082,10 +1124,20 @@ footer .social-links .f-logos {
     tr th:nth-child(2) {
         display: none;
     }
+
+    .HomePage .feature-cards {
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    }
+
 }
 
 @media (max-width:450px) {
 
+
+    .container {
+        width: 90vw !important;
+        margin: auto;
+    }
 
     .btn {
         font-size: 1rem;
@@ -1134,4 +1186,9 @@ footer .social-links .f-logos {
     100% {
         transform: rotate(360deg);
     }
+}
+
+
+.bigImage img {
+    max-height: 100%;
 }
