--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -148,6 +148,7 @@ ul {
 
 .active {
     color: var(--anchorColor);
+
 }
 
 header a {
@@ -985,8 +986,7 @@ footer .social-links .f-logos {
 .close {
     position: absolute;
     top: 10%;
-    right: 10%;
-    color: white;
+    right: 5%;
     font-size: 3rem;
 }
 
@@ -1049,46 +1049,51 @@ footer .social-links .f-logos {
 
     .navbar {
         position: absolute;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        left: -250px;
+        height: auto;
+        width: 100%;
+        top: -250px;
+        left: 0;
         transition: .4s;
         -webkit-transition: .4s;
         -moz-transition: .4s;
         -ms-transition: .4s;
         -o-transition: .4s;
+        z-index: 1000000;
+        box-shadow: 0px 1px 20px -1px rgba(0, 0, 0, 0.285);
     }
 
-    .OpenNav {
-        left: 0px;
-    }
+
 
     .navbar ul {
+        box-sizing: content-box;
+        padding: 2rem;
         flex-direction: column;
-        gap: 1rem;
-        height: 100vh;
-        justify-content: center;
-
-        background-color: var(--textColor);
+        gap: 1.4rem;
+        align-items: start;
+        background-color: white;
     }
 
+
     .OpenNav {
-        left: 0;
+        top: 0%;
     }
 
     .navbar ul a {
-        color: white;
+        color: var(--textColor);
     }
 
     .active {
         color: var(--anchorColor) !important;
+        border-bottom: var(--anchorColor) !important;
     }
 
     .HomePage .feature-cards {
         grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     }
 
+    .Toastify {
+        font-size: 1.5rem;
+    }
 
 }
 
@@ -1370,6 +1375,7 @@ footer .social-links .f-logos {
 
 .login_password a {
     color: var(--main-color);
+    font-size: 1.2rem;
 }
 
 .login_password {
