--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1381,3 +1381,256 @@ footer .social-links .f-logos {
 .login_password {
     margin-bottom: 1.5rem;
 }
+
+
+/* Admin Panel */
+.section-admin-navbar {
+    box-shadow: 0px 1px 20px -1px rgba(31, 78, 246, 0.285);
+    background-color: var(--backgroundSecondary);
+}
+
+.section-admin-navbar .active {}
+
+.section-admin-navbar ul {
+    padding: 15px;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center
+}
+
+.section-admin-products {
+    margin: 2rem 0;
+}
+
+/* For Table */
+
+
+.responsive-table {
+    width: 100%;
+    /* Ensure table columns are responsive */
+}
+
+.responsive-table th,
+.responsive-table td {
+    text-align: center;
+}
+
+.responsive-table th {
+    background-color: #f4f4f4;
+}
+
+.edit-button,
+.delete-button {
+    padding: 5px 10px;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.edit-button:hover,
+.delete-button:hover {
+    background-color: white;
+    color: black;
+}
+
+.edit-button {
+    background-color: #4CAF50;
+    border: 2px solid #4CAF50;
+    color: white;
+}
+
+.delete-button {
+    background-color: #f44336;
+    border: 2px solid #f44336;
+    color: white;
+}
+
+
+
+.Admin_Products_filters {
+    display: flex;
+    margin-top: 3rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Admin_Products_filters button,
+.admin_btn {
+    padding: 3px 8px;
+    background-color: #4CAF50;
+    color: white;
+    outline: none;
+    border-radius: 4px;
+    border: 3px solid #4CAF50;
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+
+.Admin_Products_filters button:hover,
+.admin_btn:hover {
+    opacity: .8;
+}
+
+.section-edit-product {
+    padding: 2rem 0;
+}
+
+.section-edit-product .data {
+    margin-top: 3rem;
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-edit-product .data .data_div {
+    width: 100%;
+}
+
+.section-edit-product .data .images_add_images {
+    display: flex;
+    align-items: end;
+    flex-wrap: wrap;
+
+    gap: 6rem;
+}
+
+.section-edit-product .data .images {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.section-edit-product .data .images .image {
+    position: relative;
+    width: 120px;
+    box-shadow: rgba(172, 184, 238, 0.591) 0px 3px 8px;
+}
+
+.section-edit-product .data .images .image .delete {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 15px;
+    color: rgb(235, 83, 83);
+    cursor: pointer;
+}
+
+.section-edit-product .data .images .image .delete:hover {
+    scale: 1.1;
+}
+
+
+.add_images {
+    position: relative;
+}
+
+.add_images input {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    /* z-index: -1; */
+    visibility: hidden;
+    /* visibility: hidden; */
+}
+
+.checkbox {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.checkbox input {
+    width: 40px;
+}
+
+.mt-10 {
+    margin-top: 4rem;
+}
+
+.td-img {
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.table-container td {
+    padding: 15px;
+    font-size: 12px;
+    border: none;
+}
+
+table {
+    position: relative;
+}
+
+table thead {
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+
+.table div {
+    max-height: 80vh;
+    overflow-y: scroll;
+}
+
+.table-container table {
+    margin: 0;
+    border-collapse: collapse;
+}
+
+.table-container {
+    height: 70vh;
+    overflow-x: auto;
+    overflow-y: scroll;
+    /* Enable horizontal scrolling on small screens */
+    width: 100%;
+    margin-top: 5rem;
+}
+
+@media (max-width:850px) {
+    .table-container {
+        width: 90%;
+        overflow-x: scroll;
+        margin: 4rem auto;
+    }
+
+    .table-container table {
+        width: 600px;
+    }
+}
+
+@media (max-width:500px) {
+    table {
+        max-width: 400px;
+    }
+
+    .table-container td:nth-child(2),
+    .table-container th:nth-child(2) {
+        display: block;
+    }
+
+    .display-none {
+        display: none;
+    }
+}
